--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,14 @@ body {
   box-shadow: 0 30px 50px rgba(184, 145, 235, 0.8);
   border-radius: 15px;
 }
+.search-form-input {
+  background: rgb(233, 224, 245);
+  border: none;
+  border-radius: 5px;
+  width: 80%;
+  padding: 15px;
+  font-size: 16px;
+}
 
 footer {
   text-align: center;
