--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,12 @@ body {
   box-shadow: 0 30px 50px rgba(184, 145, 235, 0.8);
   border-radius: 15px;
 }
+
+header {
+  border-bottom: 1px solid #eae4fa;
+  padding: 0 0 30px 0;
+}
+
 .search-form-input {
   background: rgb(233, 224, 245);
   border: none;
@@ -32,4 +38,6 @@ body {
 
 footer {
   text-align: center;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
 }
