added class elements and styling to the main weather details

--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,38 @@ main {
   font-size: 38px;
   line-height: 48px;
 }
+
+.weather-details {
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.weather-details strong {
+  color: #f30049;
+}
+
+.weather-temp-container {
+  display: flex;
+}
+
+.weather-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+
+.weather-temp {
+  font-size: 88px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.weather-temp-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
