--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,37 @@ main {
   font-size: 28px;
 }
 
+.forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.forecast-date {
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(39, 33, 66, 0.4);
+  margin-bottom: 10px;
+}
+
+.forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.forecast-temperatures {
+  text-align: center;
+  color: #f30049;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.forecast-temperature {
+  padding: 0 10px;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
