--- a/src/style.css
+++ b/src/style.css
@@ -101,8 +101,10 @@ main {
 }
 
 .forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .forecast-temperatures {
